--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NotesApp"
+        android:windowSoftInputMode="adjustResize"
         tools:targetApi="31">
         <activity
             android:name="br.com.frazo.jana_c.MainActivity"
             android:exported="true"
+
             android:theme="@style/Theme.NotesApp">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
