Midpoint of building compose UI, tooke several hours to discover that ModalBottomSheet is bugged on materialv3 1.1.0-alpha06, as stated in issue tracker https://issuetracker.google.com/issues/268380384.
Have to rethink the screen to add a note.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.notesapp'
+    namespace 'br.com.frazo.janac'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.notesapp"
+        applicationId "br.com.frazo.janac"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -27,6 +27,7 @@ android {
                                       "$projectDir/schemas".toString()]
             }
         }
+
     }
 
     buildTypes {
@@ -86,6 +87,19 @@ dependencies {
 
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    implementation "androidx.security:security-crypto:1.0.0"
+
+    // For Identity Credential APIs
+    implementation "androidx.security:security-identity-credential:1.0.0-alpha03"
+
+    // For App Authentication APIs
+    implementation "androidx.security:security-app-authenticator:1.0.0-alpha02"
+
+    // For App Authentication API testing
+    androidTestImplementation "androidx.security:security-app-authenticator:1.0.0-alpha01"
+
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
 }
 
 kapt {
