--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:windowSoftInputMode="adjustResize"
         tools:targetApi="31">
         <activity
-            android:name="br.com.frazo.janac.MainActivity"
+            android:name="br.com.frazo.janac.ui.MainActivity"
             android:exported="true"
 
             android:theme="@style/Theme.NotesApp">
