--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/sticky_note"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.NotesApp"
         android:windowSoftInputMode="adjustResize"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:hasFragileUserData="true">
         <activity
             android:name="br.com.frazo.janac.ui.MainActivity"
             android:exported="true"
