--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.4.0-beta01'
-        hilt_version = '2.44'
+        compose_version = '1.5.0-alpha01'
+        hilt_version = '2.45'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
