- feat: Splash Screen.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,12 +60,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-beta01'
+    implementation 'androidx.compose.material3:material3:1.1.0-beta02'
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
@@ -82,7 +82,7 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-fragment:1.0.0'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
@@ -113,9 +113,16 @@ dependencies {
     //Easy Permissions
     implementation 'com.github.ygorluizfrazao.easy-permissions:core:v1.0.1-alpha01'
     implementation 'com.github.ygorluizfrazao.easy-permissions:ext:v1.0.1-alpha01'
+
     //Highlight Text
     implementation 'com.github.ygorluizfrazao.highlighted-text-compose:highlighted_text_compose:1.0.0-alpha01'
     implementation 'com.github.ygorluizfrazao.highlighted-text-compose:reusable_clickable_text:1.0.0-alpha01'
+
+    //Coil
+    implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation "io.coil-kt:coil-gif:2.1.0"
+
+    implementation 'com.github.ygorluizfrazao:compose-splash-screens:1.0.0-alpha01'
 
 }
 
